banner-home-page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,12 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner-home">
+      <div class="container">
+        <h1>Invasion de souries chez vous ? Faîtes appel a Hunting Cats !</h1>
+        <p>Réservez des chats proche de chez vous en un click</p>
+        <a href="" class="btn btn-primary"> Trouver votre Chat ! </a>
+      </div>
+    </div>
+
+
+
+
+
