ajout d'un texte de présentation & et d'un vidéo sur la home-page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,29 @@
 <div class="banner-home">
-      <div class="container">
-        <h1>Invasion de souries chez vous ? Faîtes appel a Hunting Cats !</h1>
-        <p>Réservez des chats proche de chez vous en un click</p>
-        <a href="" class="btn btn-primary"> Trouver votre Chat ! </a>
-      </div>
+  <div class="container">
+    <h1>Invasion de souries chez vous ? Faîtes appel à Hunting Cats !</h1>
+    <h3>Réservez des chats proche de chez vous en un clic</h3>
+    <div class="pt-5">
+      <button type="button" class="btn btn-info">Trouvez votre chat</button>
     </div>
+    </div>
+</div>
+
+<div class="container pt-5">
+      <h1>Pourquoi Hunting Cats ?</h1>
+        <div class="row">
+          <div class="col-12 col-lg-6">
+            <div>
+              <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.<strong> Regarder notre vidéo d'experts</strong> pour vous guider vers le meilleur choix.</p>
+            </div>
+          </div>
+          <div class="col-12 col-lg-6">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/ZzWJC1Q9rO8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+    </div>
+
 
 
 
