--- a/app/assets/stylesheets/components/_banner-home.scss
+++ b/app/assets/stylesheets/components/_banner-home.scss
@@ -2,7 +2,7 @@
   background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(hunting-cats-home-banner.png);
   background-size:cover;
   background-position: center;
-  height:800px;
+  height:700px;
   color:white;
   padding:150px 0px;
 }
@@ -10,3 +10,9 @@
 .banner-home h1 {
   font-size:35px;
 }
+
+.banner-home h3 {
+  font-size:24px;
+}
+
+
