text align sur la présentation + color title blue

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="banner-home">
   <div class="container">
-    <h1>Invasion de souries chez vous ? Faîtes appel à Hunting Cats !</h1>
+    <h1>Invasion de souris chez vous ? Faîtes appel à Hunting Cats !</h1>
     <h3>Réservez des chats proche de chez vous en un clic</h3>
     <div class="pt-5">
       <button type="button" class="btn btn-info">Trouvez votre chat</button>
@@ -9,11 +9,11 @@
 </div>
 
 <div class="container pt-5">
-      <h1>Pourquoi Hunting Cats ?</h1>
+      <h1 class="title-color">Pourquoi Hunting Cats ?</h1>
         <div class="row">
           <div class="col-12 col-lg-6">
             <div>
-              <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.<strong> Regarder notre vidéo d'experts</strong> pour vous guider vers le meilleur choix.</p>
+              <p class="text-justify">Vous chercher un moyen <strong>naturel</strong> d'attraper vos souris ? Vous ne possédez pas de chat ou alors le votre n'est pas un hunter dans l'âme ? Pas de panique, Hunting Cats est la solution à vos soucis ! Très simple d'utilisation, en seulement quelques clics vous pouvez réserver un Hunting Cats près de chez vous qui viendra faire le ménage une bonne fois pour toute !<strong> Regarder notre vidéo d'expert</strong> pour vous guider vers le meilleur choix.</p>
             </div>
           </div>
           <div class="col-12 col-lg-6">
