ajout bouton plus gros,et couleur+fautes

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,11 @@
 <div class="banner-home">
   <div class="container">
-    <h1>Invasion de souris chez vous ? Faîtes appel à Hunting Cats !</h1>
-    <h3>Réservez des chats proche de chez vous en un clic</h3>
-    <div class="pt-5">
-      <button type="button" class="btn btn-info">Trouvez votre chat</button>
-    </div>
+    <h1>Invasion de souris chez vous ? Faites appel à Hunting Cats !</h1>
+    <h3>Réservez des chats proches de chez vous en un clic</h3>
+      <div class="pt-5">
+        <%= link_to "Trouvez votre chat", cats_path, class: "btn btn-primary btn-lg" %>
+        <!-- <button type="button" class="btn btn-info">Trouvez votre chat</button> -->
+      </div>
     </div>
 </div>
 
