ajout du footer, avec logo fictifs de réseaux sociaux & les copyright

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,20 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
+
+    <div class="footer">
+      <div class="footer-links">
+        <h5 class="title-social">Follow us</h5>
+        <div>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-facebook"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <p>Ce site a été réalisé avec <i class="fas fa-heart"></i> par la Hunting Cats team 😸</p>
+      </div>
+    </div>
+
   </body>
 </html>
