First draft of index and show

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,3 +2,9 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
+@import "card";
+@import "container-index";
+@import "search-form";
+@import "star";
+@import "column";
+@import "calendar";
