--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,12 +1,12 @@
-<div class="text-center">
-<h2>Sign up</h2>
-
+<div class="text-center mb-4">
+  <h2>Sign up</h2>
+</div>
 
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
+  <div class="form-inputs text-center">
     <%= f.input :email,
                 required: true,
                 autofocus: true,
@@ -21,10 +21,9 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up", class: "btn btn-primary" %>
+    <%= f.button :submit, "Sign up", class: "btn btn-primary mb-4" %>
   </div>
 <% end %>
-</div>
 
 <%= render "devise/shared/links" %>
 
