--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,7 +23,7 @@
       <li class="nav-item dropdown">
         <!-- && @user.avatar.key?         -->
         <% if user_signed_in? %>
-          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle" , id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <%= image_tag "cl_image_path user.avatar.key", class: "avatar dropdown-toggle" , id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <!-- image_tag ("https://kitt.lewagon.com/placeholder/users/ssaunier" -->
             <!-- image_tag "cl_image_path user.key" -->
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
