--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,7 +23,9 @@
       <li class="nav-item dropdown">
         <!-- && @user.avatar.key?         -->
         <% if user_signed_in? %>
-          <%= cl_image_tag @user.avatar.key unless @user.avatar.key.nil? , class: "avatar dropdown-toggle" , id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <% unless current_user.avatar.key.nil?  %>
+            <%= cl_image_tag current_user.avatar.key, class: "avatar dropdown-toggle" , id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <% end %>
           <!-- image_tag ("https://kitt.lewagon.com/placeholder/users/ssaunier" -->
             <!-- image_tag "cl_image_path user.key" -->
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
