--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -29,10 +29,10 @@
           <!-- image_tag ("https://kitt.lewagon.com/placeholder/users/ssaunier" -->
             <!-- image_tag "cl_image_path user.key" -->
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "My bookings as client", bookings_path, class: "dropdown-item" %>
-            <%= link_to "My bookings as owner", owner_bookings_path, class: "dropdown-item" unless current_user.cats.nil? %>
-            <%= link_to "My cats as owner", owner_cats_path, class: "dropdown-item" if current_user.cats.any? %>
-            <%= link_to "Create a cat as owner", new_owner_cat_path, class: "dropdown-item" if user_signed_in? %>
+            <%= link_to "My cats bookings", bookings_path, class: "dropdown-item" %>
+            <%= link_to "Create a cat", new_owner_cat_path, class: "dropdown-item" %>
+            <%= link_to "My cats", owner_cats_path, class: "dropdown-item" if current_user.cats.any? %>
+            <%= link_to "My rented cats", owner_bookings_path, class: "dropdown-item" unless current_user.cats.nil? %>
             <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item " if user_signed_in? %>
           </div>
         <% end %>
