--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,6 @@
-<div class="text-center mb-4">
+<!-- <div class="text-center mb-4">
   <h2>Sign up</h2>
-</div>
-
+</div> -->
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
