--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -4,7 +4,7 @@
 <h1>List of cats</h1>
 </div>
 
-<div class="container-header">
+<!-- <div class="container-header">
 
   <div class="row">
     <div class="column">
@@ -26,7 +26,7 @@
     <% end %>
     </div>
   </div>
-</div>
+</div> -->
 
 
 <div class="container-index">
