ajout gem, et image logo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
         </div>
       </div>
       <div class="footer-copyright">
-        <p>Ce site a été réalisé avec <i class="fas fa-heart"></i> par la Hunting Cats team 😸</p>
+        <p>This website was made with <i class="fas fa-heart"></i> by the Hunting Cats team 😺</p>
       </div>
     </div>
 
