--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <%= link_to :root, class: "navbar-brand" do %>
-    <%= image_tag "hunting_cat_logo.jpeg", class: "image_rounded" %>
+    <%= image_tag "hunting-cats-logo.png", class: "image-circle" %>
   <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
