--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -10,8 +10,8 @@
             <div class="card-trip-infos">
               <div>
                 <h3> <%= booking.cat.name %> </h3>
-                <h2> Starting_date: <%= booking.starting_date %> </h2>
-                <h2> Ending_date: <%= booking.ending_date %> </h2>
+                <h6> Starting date : <%= booking.starting_date %> </h6>
+                <h6> Ending date : <%= booking.ending_date %> </h6>
                 <!-- <h2> class="card-trip-pricing" > total_price: <%= booking.total_price %> € </h2> -->
                 <!-- <h2> Status: <%= booking.status %> </h2> -->
               </div>
