bookings ok with total price

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -12,8 +12,8 @@
                 <h3> <%= booking.cat.name %> </h3>
                 <h6> Starting date : <%= booking.starting_date %> </h6>
                 <h6> Ending date : <%= booking.ending_date %> </h6>
-                <!-- <h2> class="card-trip-pricing" > total_price: <%= booking.total_price %> € </h2> -->
-                <!-- <h2> Status: <%= booking.status %> </h2> -->
+                <h6 class="card-trip-pricing"> Price : <%= booking.total_price %> € </h6>
+                <!-- <h6> Status: <%= booking.status %> </h6> -->
               </div>
             </div>
           </div>
