update navbar link + cleanup

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,12 +1,13 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
-@import "navbar";
+@import "banner-home";
+@import "calendar";
+@import "card-product";
 @import "card";
+@import "column";
 @import "container-index";
+@import "footer";
+@import "navbar";
 @import "search-form";
 @import "star";
-@import "column";
-@import "calendar";
-@import "banner-home";
-@import "footer";
