--- a/app/assets/stylesheets/components/_banner-home.scss
+++ b/app/assets/stylesheets/components/_banner-home.scss
@@ -1,5 +1,5 @@
 .banner-home {
-  background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(images/hunting-cats-home-banner.png);
+  background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), asset-url("hunting-cats-home-banner.png");
   background-size: cover;
   background-position: center;
   height:700px;
