--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -1,37 +1,40 @@
-<div class="container-header">
-  <h1><%= @cat.name %></h1>
-</div>
-<div>
- <%= link_to "Back to index", cats_path %>
-</div>
 <div class="container">
-  <div class="row">
-    <div class="col-8">
-      <div class="card-trip" >
-        <%= cl_image_tag @cat.photo.key, height: 300, width: 500, crop: :fill %>
-        <div class="card-trip-infos">
-          <div>
-            <p> Description: <%= @cat.description %> </p>
-            <p> Breed: <%= @cat.breed %> </p>
-            <p> Performance: <%= @cat.performance %> </p>
-            <p class="card-trip-pricing" > price per day: <%= @cat.price_per_day %> € </p>
-            <p> Status: <%= @cat.status %> </p>
+  <div class="container-header">
+    <h1><%= @cat.name %></h1>
+  </div>
+  <div>
+   <%= link_to "Back to index", cats_path %>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-8">
+        <div class="card-trip" >
+          <%= cl_image_tag @cat.photo.key, height: 300, width: 500, crop: :fill %>
+          <div class="card-trip-infos">
+            <div>
+              <p> Description: <%= @cat.description %> </p>
+              <p> Breed: <%= @cat.breed %> </p>
+              <p> Performance: <%= @cat.performance %> </p>
+              <p class="card-trip-pricing" > price per day: <%= @cat.price_per_day %> € </p>
+              <p> Status: <%= @cat.status %> </p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="col-4">
-      <%= simple_form_for [@cat, @booking] do |f| %>
+      <div class="col-4">
+        <%= simple_form_for [@cat, @booking] do |f| %>
 
-          <%= f.input :starting_date %>
-          <%= f.input :ending_date %>
-          <%= f.submit "Book a cat", class: "btn btn-primary btn-lg" %>
-      <% end %>
+            <%= f.input :starting_date %>
+            <%= f.input :ending_date %>
+            <%= f.submit "Book a cat", class: "btn btn-primary btn-lg" %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
+<div class="mt-300"></div>
 
-
+<%= render 'shared/footer' %>
 
 
 
