--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -5,6 +5,26 @@
 <div class="container-index">
       <% @bookings.each do |booking| %>
         <% if booking.user_id == current_user.id %>
+          <div class="card-product" >
+            <%= cl_image_tag booking.cat.photo.key, height: 300, width: 500, crop: :fill %>
+            <div class="card-product-infos">
+              <div>
+                <h2> <%= booking.cat.name %> </h2>
+                <p> From :<br> <%= booking.starting_date %> </p>
+                <p> To :<br> <%= booking.ending_date %> </p>
+                <p> Price : <%= booking.total_price %> €</p>
+                <!-- <p> Status: <%= booking.status %> </p> -->
+              </div>
+            </div>
+          </div>
+        <% end %>
+      <% end %>
+</div>
+
+
+<!-- <div class="container-index">
+      <% @bookings.each do |booking| %>
+        <% if booking.user_id == current_user.id %>
           <div class="card-trip" >
             <%= cl_image_tag booking.cat.photo.key, height: 300, width: 500, crop: :fill %>
             <div class="card-trip-infos">
@@ -13,10 +33,9 @@
                 <h6> Starting date : <%= booking.starting_date %> </h6>
                 <h6> Ending date : <%= booking.ending_date %> </h6>
                 <h6 class="card-trip-pricing"> Price : <%= booking.total_price %> €</h6>
-                <!-- <h2> Status: <%= booking.status %> </h2> -->
               </div>
             </div>
           </div>
         <% end %>
       <% end %>
-</div>
+</div> -->
