box in box fixed for index

--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -36,7 +36,7 @@
       <%= cl_image_tag cat.photo.key, height: 300, width: 700, crop: :fill %>
     </div>
     <div class="card-trip-infos">
-      <div> <h5 class="card-trip .card-trip-infos"> <%= cat.name.upcase %></h5> </div>
+      <div> <h5 > <%= cat.name.upcase %></h5> </div>
       <div> <h2 > Description: <%= cat.description %>  </h2> </div>
       <div> <h2 > Breed: <%= cat.breed %> </h2> </div>
       <div> <h2 > Performance: <%= cat.performance %> </h2></div>
