stylisé titre page index et my bookings

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container-header">
-  <h1>List of my bookings</h1>
+  <h1 class="title-color">MY BOOKINGS</h1>
 </div>
 
 <div class="container-index">
