--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -1,7 +1,7 @@
 
 <div>
 <div class="container-header">
-<h1>List of cats</h1>
+<h1 class="title-color">LIST OF CATS</h1>
 </div>
 
 <!-- <div class="container-header">
