card title clickable

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -24,8 +24,9 @@
 }
 
 .card-trip a {
-  display: block;
-  align-items: right;
+  font-size: 22px;
+  // display: block;
+  align-text: center;
   }
 
 .card-trip .card-trip-infos {
