--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,6 +5,8 @@
   justify-content: space-between;
   height: 100px;
   padding: 0px 50px;
+  position: relative;
+  margin-top: 50vh;
 }
 .footer-links {
   display: flex;
