--- a/app/assets/stylesheets/components/_container-index.scss
+++ b/app/assets/stylesheets/components/_container-index.scss
@@ -4,8 +4,8 @@
   width: 1200px;
   margin: 50px auto;
   justify-content: space-between;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 16px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 50px;
 
 }
 
@@ -13,7 +13,3 @@
   display: flex;
   justify-content: center;
 }
-
-// div {
-//   border: 1px red solid;
-// }
