--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,7 +4,7 @@
 @import "banner-home";
 @import "card-product";
 @import "card";
-@import "container-index";
+@import "containers";
 @import "footer";
 @import "navbar";
 @import "search-form";
