--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,23 +11,22 @@
 </div>
 
 <div class="container pt-5">
-      <h2 class="title-color">Why using Hunting Cats services?</h2>
-        <div class="row">
-          <div class="col-12 col-lg-6">
-            <div>
-              <p class="text-justify">Your are looking for a <strong>naturel</strong> way to get ride of your mice? You don't own a cat or yours does not have the "hunter skills"? Don't panic, Hunting Cats is the solution to all your problems! Very easy to use, in just a few clicks you can book a Hunting Cats near you that will clean up your house!<strong> Watch our video:</strong> we give you advice <strong>to choose the best cat</strong> according to your situation.</p>
-            </div>
-          </div>
-          <div class="col-12 col-lg-6">
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/ZzWJC1Q9rO8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-          </div>
-        </div>
+  <h2 class="title-color">Why using Hunting Cats services?</h2>
+  <div class="row">
+    <div class="col-12 col-lg-6">
+      <div>
+        <p class="text-justify">Your are looking for a <strong>naturel</strong> way to get ride of your mice? You don't own a cat or yours does not have the "hunter skills"? Don't panic, Hunting Cats is the solution to all your problems! Very easy to use, in just a few clicks you can book a Hunting Cats near you that will clean up your house!<strong> Watch our video:</strong> we give you advice <strong>to choose the best cat</strong> according to your situation.</p>
+      </div>
     </div>
+    <div class="col-12 col-lg-6">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ZzWJC1Q9rO8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+</div>
 
-
-
+<%= render 'shared/footer' %>
 
 
 
