--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -11,10 +11,14 @@
   object-fit: cover;
 }
 
+.card-show > img {
+  height: 400px;
+}
+
 .card-trip h2 {
-  font-size: 16px;
-  // font-weight: bold;
-  margin: 5px;
+  font-size: 25px;
+  font-weight: bold;
+  margin: 0;
 }
 
 .card-trip p {
@@ -23,12 +27,6 @@
   margin: 0;
 }
 
-.card-trip a {
-  font-size: 22px;
-  // display: block;
-  align-text: center;
-  }
-
 .card-trip .card-trip-infos {
   padding: 16px;
   // display: flex;
@@ -36,11 +34,3 @@
   // align-items: flex-end;
   // position: relative;
 }
-
-// .card-trip-infos .card-trip-user {
-//   position: absolute;
-//   right: 16px;
-//   top: -20px;
-//   width: 40px;
-// }
-
