--- a/app/assets/stylesheets/components/_containers.scss
+++ b/app/assets/stylesheets/components/_containers.scss
@@ -4,7 +4,7 @@
   width: 1200px;
   margin: 50px auto;
   justify-content: space-between;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-gap: 50px;
 
 }
@@ -12,4 +12,9 @@
 .container-header {
   display: flex;
   justify-content: center;
+  margin-top: 30px;
+}
+
+.container-show {
+  margin-top: 50px;
 }
