--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -22,7 +22,7 @@
         </div>
       </div>
     </div>
-    <div class="col-4">
+    <!-- <div class="col-4">
       <%= simple_form_for [@cat, @booking] do |f| %>
         <div class="search-form-control form-group">
           <%= f.input :starting_date %>
@@ -31,17 +31,6 @@
           <i class="fas fa-search"></i>
         </div>
       <% end %>
-    </div>
+    </div> -->
   </div>
 </div>
-
-
-
-
-<!--     <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
-      <div class="card-header">Planner</div>
-      <div class="card-body">
-        <h5 class="card-title">Availability</h5>
-        <p class="card-text">Availability Planner will take place here.</p>
-      </div>
-    </div> -->
