--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to cats_path, class: "navbar-brand" do %>
-    <%= image_tag "hunting-cats-logo.png" %>
+  <%= link_to root_path, class: "navbar-brand" do %>
+    <%= image_tag "Logo-HCatsFixed-12.png" %>
   <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,6 +11,14 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
+        <%= link_to 'All Cats', cats_path, class: "btn btn-outline-primary mx-4"%>
+        <% if user_signed_in? %>
+          <%= link_to 'My Bookings',  bookings_path, class: "btn btn-outline-primary mx-4"%>
+          <%= link_to 'Add a Cat',  new_owner_cat_path, class: "btn btn-outline-primary mx-4"%>
+          <%= link_to 'All my Cat',  owner_cats_path, class: "btn btn-outline-primary mx-4"%>
+          <%= link_to "My rented cats bookings", owner_bookings_path, class: "btn btn-outline-primary mx-4"%>
+        <% else %>
+        <% end %>
         <%= link_to 'Login', new_user_session_path, class: "btn btn-primary mx-4" unless user_signed_in? %>
       </li>
       <li class="nav-item">
@@ -23,10 +31,6 @@
             <%= cl_image_tag current_user.avatar.key, class: "avatar dropdown-toggle" , id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <% end %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "My cats bookings", bookings_path, class: "dropdown-item" %>
-            <%= link_to "Create a cat", new_owner_cat_path, class: "dropdown-item" %>
-            <%= link_to "All my cats", owner_cats_path, class: "dropdown-item" if current_user.cats.any? %>
-            <%= link_to "My rented cats bookings", owner_bookings_path, class: "dropdown-item" unless current_user.cats.nil? %>
             <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item " if user_signed_in? %>
           </div>
         <% end %>
