--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,7 +1,7 @@
 .card-trip {
   overflow: hidden;
   background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
   border-radius: 5px;
 }
 
@@ -15,10 +15,19 @@
   height: 400px;
 }
 
+.card-show .subtitle {
+  font-weight: lighter;
+  padding-bottom: 10px;
+}
+
 .card-trip h2 {
   font-size: 25px;
   font-weight: bold;
   margin: 0;
+}
+
+.card-trip h1 {
+  font-weight: bold;
 }
 
 .card-trip p {
@@ -29,8 +38,21 @@
 
 .card-trip .card-trip-infos {
   padding: 16px;
-  // display: flex;
-  // justify-content: space-between;
-  // align-items: flex-end;
-  // position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  position: relative;
+}
+
+.form-show {
+  background-color: white;
+  padding: 25px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  h3 {
+    text-align: center;
+  }
+  .form-content {
+    padding-top: 20px;
+  }
 }
