--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -11,7 +11,7 @@
             <p> Performance: <%= @cat.performance %> </p>
             <p> <%= @cat.status %> </p>
           </div>
-          <h2 class="card-trip-pricing" > <%= @cat.price_per_day %> € / day </h2>
+          <h2 > <%= @cat.price_per_day %> € / day </h2>
         </div>
       </div>
     </div>
