--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -1,5 +1,5 @@
 
-<h1 class="container-header title-color">The Hunters</h1>
+<h1 class="container-header page-title">The Hunters</h1>
 
 <div class="container-index">
   <% @cats.each do |cat| %>
@@ -7,10 +7,12 @@
       <div>
         <%= cl_image_tag cat.photo.key, height: 300, width: 700, crop: :fill %>
       </div>
-      <div class="card-trip-infos">
-         <h2><%= link_to cat.name.upcase, cat_path(cat) %></h2>
-         <p> Performance: <%= cat.performance %> </p>
-         <p class="card-trip-pricing"> <%= cat.price_per_day %> € / day</p>
+      <div class="card-trip-infos-index-cats">
+        <div>
+           <h2><%= link_to cat.name.upcase, cat_path(cat) %></h2>
+           <p> Performance: <%= cat.performance %> </p>
+        </div>
+        <h4> <%= cat.price_per_day %> € / day</h4>
       </div>
     </div>
   <% end %>
