missing semi colon'

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -8,7 +8,7 @@
 @import "footer";
 @import "navbar";
 @import "search-form";
-@import "lien_navBar"
+@import "lien_navBar";
 @import "button";
 @import "page-title";
 
