ajustement couleur bouton, texte plus gros, titre center

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,4 +1,10 @@
 .title-color {
-  color:#037196,
+  color:#FE5F55;
+  text-align: center;
+  padding-bottom: 40px
+}
+
+p {
+  font-size:22px;
 }
 // Specific CSS for your home-page
