--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -1,4 +1,3 @@
-
 <h1 class="container-header title-color">The Hunters</h1>
 
 <div class="container-index">
@@ -8,9 +7,13 @@
         <%= cl_image_tag cat.photo.key, height: 300, width: 700, crop: :fill %>
       </div>
       <div class="card-trip-infos">
-         <h2><%= link_to cat.name.upcase, cat_path(cat) %></h2>
-         <p> Performance: <%= cat.performance %> </p>
-         <p class="card-trip-pricing"> <%= cat.price_per_day %> € / day</p>
+        <h2><%= link_to cat.name.upcase, cat_path(cat) %></h2>
+      </div>
+      <div class="card-trip-mouses">
+        <% cat.performance.times do %>
+          <%= image_tag "pink_mouse.svg", :width => "7%" %>
+        <% end %>
+          <h2> <%= cat.price_per_day %> € </h2>
       </div>
     </div>
   <% end %>
