--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -70,9 +70,9 @@
   }
   a {
     color: black;
-    &:hover{
+    &:hover {
+      color: $orange;
       text-decoration: none;
-      opacity: 0.7;
     }
   }
 }
