--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,9 +5,26 @@
 
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
+
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 120px;
+  width: 100px;
 }
 
+.lien-navbar {
+  color: $blue;
+  text-decoration: none;
+  font-size: 25px;
+  padding-right: 25px;
+  padding-top: 20px;
+  &:hover {
+    color: $orange;
+    text-decoration: none;
+  }
+}
+
+// .navbar-cats {
+//   display: flex;
+//   vertical-align: center;
+// }
