--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <%= link_to root_path, class: "navbar-brand" do %>
-    <%= image_tag "Logo-HCatsFixed-12.png" %>
+    <%= image_tag "LogoCatsOrange-12.png" %>
   <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,31 +10,40 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <%= link_to 'ALL CATS', cats_path, class: "lien_navbar mx-4"%>
-        <% if user_signed_in? %>
-          <%= link_to 'MY BOOKINGS |',  bookings_path, class: "lien_navbar mx-4" %>
-          <%= link_to 'ADD A CAT',  new_owner_cat_path, class: "lien_navbar mx-4"%>
-          <%= link_to 'MY CATS',  owner_cats_path, class: "lien_navbar mx-4"%>
-          <%= link_to "MY CATS RENTS", owner_bookings_path, class: "lien_navbar mx-4"%>
-        <% else %>
-        <% end %>
-        <%= link_to 'Login', new_user_session_path, class: "btn btn-primary mx-4" unless user_signed_in? %>
+      <li class="nav-item lien-navbar">
+        <%= link_to 'ALL CATS', cats_path, class: "lien-navbar"%>
       </li>
-      <li class="nav-item">
-        <%= link_to 'Sign-up', new_user_registration_path, class: "btn btn-primary mx-4" unless user_signed_in? %>
-      </li>
-
-      <li class="nav-item dropdown">
-        <% if user_signed_in? %>
-          <% unless current_user.avatar.key.nil?  %>
-            <%= cl_image_tag current_user.avatar.key, class: "avatar dropdown-toggle" , id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+      <% if user_signed_in? %>
+        <li class="nav-item lien-navbar">
+          <%= link_to 'MY BOOKINGS',  bookings_path, class: "lien-navbar" %>
+        </li>
+        <li class="nav-item lien-navbar">
+          <%= link_to 'ADD A CAT',  new_owner_cat_path, class: "lien-navbar"%>
+        </li>
+        <li class="nav-item lien-navbar">
+          <%= link_to 'MY CATS',  owner_cats_path, class: "lien-navbar"%>
+        </li>
+        <li class="nav-item lien-navbar">
+          <%= link_to "MY CATS RENTS", owner_bookings_path, class: "lien-navbar"%>
+        </li>
+        <li class="nav-item dropdown">
+          <% if user_signed_in? %>
+            <% unless current_user.avatar.key.nil?  %>
+              <%= cl_image_tag current_user.avatar.key, class: "avatar dropdown-toggle" , id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <% end %>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item " if user_signed_in? %>
+            </div>
           <% end %>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item " if user_signed_in? %>
-          </div>
-        <% end %>
-      </li>
+        </li>
+      <% else %>
+        <li class="nav-item">
+          <%= link_to 'Login', new_user_session_path, class: "btn btn-warning" unless user_signed_in? %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Sign-up', new_user_registration_path, class: "btn btn-warning" unless user_signed_in? %>
+        </li>
+      <% end %>
     </ul>
   </div>
 </div>
