font size changed

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -62,13 +62,20 @@
 }
 
 .card-trip .card-trip-infos-index-cats {
-  padding: 16px;
+  padding: 20px 25px 15px 25px;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
   position: relative;
+  h3 {
+    padding-left: 10px;
+    font-weight: bold;
+    font-size: 30px;
+  }
   h4 {
     font-weight: bold;
+    margin-bottom: 0;
+    font-size: 25px;
   }
   a {
     color: black;
