--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,10 +1,31 @@
 .title-color {
   color:#FE5F55;
   text-align: center;
-  padding-bottom: 40px
+  padding-bottom: 40px;
 }
 
 p {
   font-size:22px;
+  padding-right: 10px;
 }
 // Specific CSS for your home-page
+
+.cards{
+  display: flex;
+  justify-content: space-between;
+  align-items:center;
+  margin-bottom: 30px;
+}
+
+.card{
+  width: 200px;
+  border-radius: 50px;
+  box-shadow: 0 0 5px rgb(230,230,230);
+  text-align: center;
+  padding: 20px;
+  border: 1px solid rgb(230,230,230);
+}
+
+.card img {
+    height: 100px;
+}
