--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
   <div class="row">
     <div class="col-12 col-lg-6">
       <div>
-        <p class="text-justify">Your are looking for a <strong>natural</strong> way to get ride of your mice? You don't own a cat or yours does not have the "hunter skills"? Don't panic, Hunting Cats is the solution to all your problems! Very easy to use, in just a few clicks you can book a Hunting Cats near you that will clean up your house!<strong> Watch our video:</strong> we give you advice <strong>to choose the best cat</strong> according to your situation.</p>
+        <p class="text-justify">Your are looking for a <strong>natural</strong> way to get ride of your mice? You don't own a cat or yours is not a natural mousers? Don't panic, Hunting Cats is the solution to all your problems! Very easy to use, in just a few clicks you can book a Hunting Cats near you that will clean up your house!<strong> Watch our video:</strong> we give you advice <strong>to choose the best cat</strong> according to your situation.</p>
       </div>
     </div>
     <div class="col-12 col-lg-6">
@@ -26,6 +26,30 @@
   </div>
 </div>
 
+<div class="container text-center pt-5">
+  <h2 class="title-color">How it works?</h2>
+  <div class="cards">
+      <div class="card">
+        <h3>1</h3>
+      <%= image_tag "etape1.svg"%>
+        <p>Search Cats</p>
+      </div>
+      <i class="fas fa-paw"></i>
+      <i class="fas fa-paw"></i>
+      <div class="card">
+        <h3>2</h3>
+      <%= image_tag "etape2.svg"%>
+        <p>Book a Cat</p>
+      </div>
+      <i class="fas fa-paw"></i>
+      <i class="fas fa-paw"></i>
+      <div class="card">
+        <h3>3</h3>
+        <%= image_tag "etape3.svg"%>
+        <p>Let's go</p>
+      </div>
+    </div>
+</div>
 
 
 
