--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -20,7 +20,6 @@ p {
 .card{
   width: 200px;
   border-radius: 50px;
-  box-shadow: 0 0 5px rgb(230,230,230);
   text-align: center;
   padding: 20px;
   border: 1px solid rgb(230,230,230);
@@ -28,4 +27,9 @@ p {
 
 .card img {
     height: 100px;
+}
+
+i {
+  color:#FE5E55;
+  font-size:35px
 }
