--- a/app/assets/stylesheets/components/_card-product.scss
+++ b/app/assets/stylesheets/components/_card-product.scss
@@ -2,7 +2,7 @@
 
 .card-product {
   overflow: hidden;
-  height: 160px;
+  height: 300px;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
@@ -11,7 +11,7 @@
 
 .card-product img {
   height: 100%;
-  width: 160px;
+  width: 300px;
   object-fit: cover;
 }
 
@@ -38,11 +38,11 @@
   padding: 25px;
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: stretch;
   position: relative;
   .price {
     font-weight: bold;
-    font-size: 50px;
+    font-size: 40px;
   }
   p {
     font-size: 20px;
