--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -6,16 +6,20 @@
       <% @bookings.each do |booking| %>
         <% if booking.user_id == current_user.id %>
           <div class="card-product" >
-            <%= cl_image_tag booking.cat.photo.key, height: 300, width: 500, crop: :fill %>
+            <%= cl_image_tag booking.cat.photo.key, crop: :fill %>
             <div class="card-product-infos-bookings">
               <div>
                 <h1><%= booking.cat.name %> </h1>
-                <p>from <%= booking.starting_date %> to <%= booking.ending_date %> </p>
-                <% totaltime = booking.ending_date - booking.starting_date %>
-                <p> <%= totaltime %> / days</p>
+                <div>
+                  <p>Booked for <%= (booking.ending_date - booking.starting_date).to_i %> days from <%= booking.starting_date.strftime("%B %d, %Y") %> </p>
+                </div>
+                <div>
+                  <p> Status: <%= booking.status %> </p>
+                </div>
               </div>
-              <p class="price"> <%= booking.total_price %> €</p>
-                <!-- <p> Status: <%= booking.status %> </p> -->
+              <div>
+                <p class="price"> <%= booking.total_price %> €</p>
+                </div>
             </div>
           </div>
         <% end %>
