ajustement du titre de la banner

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="banner-home">
   <div class="container">
-    <h1>Infestation of mice in your home? Use Hunting Cats services!</h1>
+    <h1>Infestation of mice in your home? <br>Use Hunting Cats services!</br></h1>
     <h3>Choose a natural solution to get ride of it.</h3>
     <h3>Book an experienced cat near you! </h3>
       <div class="pt-5">
