my bookings fixed

--- a/app/assets/stylesheets/components/_card-product.scss
+++ b/app/assets/stylesheets/components/_card-product.scss
@@ -2,7 +2,7 @@
 
 .card-product {
   overflow: hidden;
-  height: 300px;
+  height: 210px;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
@@ -11,7 +11,7 @@
 
 .card-product img {
   height: 100%;
-  width: 300px;
+  width: 210px;
   object-fit: cover;
 }
 
@@ -38,14 +38,21 @@
   padding: 25px;
   display: flex;
   justify-content: space-between;
-  align-items: stretch;
+  align-items: flex-end;
   position: relative;
   .price {
     font-weight: bold;
-    font-size: 40px;
+    font-size: 50px;
+    color: $gray;
   }
   p {
     font-size: 20px;
+    color: $gray
+  }
+  h1 {
+    font-size: 60px;
+    font-weight: bold;
+    color: $gray
   }
 }
 
