in MY BOOKINGS link added on cat name to go back to the cat show

--- a/app/assets/stylesheets/components/_card-product.scss
+++ b/app/assets/stylesheets/components/_card-product.scss
@@ -43,16 +43,21 @@
   .price {
     font-weight: bold;
     font-size: 50px;
-    color: $gray;
+    color: $orange;
+    opacity: 1;
   }
   p {
     font-size: 20px;
     color: $gray
   }
-  h1 {
+  a {
     font-size: 60px;
     font-weight: bold;
-    color: $gray
+    color: $gray;
+    &:hover {
+      text-decoration: none;
+      color: $orange;
+    }
   }
 }
 
