--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -9,7 +9,7 @@
             <%= cl_image_tag booking.cat.photo.key, width: 300, height: 200, crop: :fill %>
             <div class="card-product-infos-bookings">
               <div>
-                <h1><%= booking.cat.name %> </h1>
+                <h1><%= link_to booking.cat.name, cat_path(booking.cat) %> </h1>
                 <div>
                   <p>Booked for <%= (booking.ending_date - booking.starting_date).to_i %> days from <%= booking.starting_date.strftime("%B %d, %Y") %> </p>
                 </div>
