--- a/app/assets/stylesheets/components/_card-product.scss
+++ b/app/assets/stylesheets/components/_card-product.scss
@@ -44,7 +44,7 @@
     font-weight: bold;
     font-size: 50px;
     color: $orange;
-    opacity: 1;
+    opacity: 0.8;
   }
   p {
     font-size: 20px;
@@ -54,6 +54,8 @@
     font-size: 60px;
     font-weight: bold;
     color: $gray;
+    opacity: 0.9;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
     &:hover {
       text-decoration: none;
       color: $orange;
