--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,5 +1,7 @@
 .btn-show {
   background-color: $orange;
+  margin-top: 35px;
+  margin-bottom: 5px;
   border: none;
   border-radius: 25px;
   color: white;
