--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -22,20 +22,25 @@
   padding-bottom: 10px;
 }
 
-.card-trip h2 {
-  font-size: 25px;
+.card-trip .subtitle {
+  font-size: 30px;
   font-weight: bold;
   margin: 0;
+  color: $gray;
 }
 
 .card-trip h1 {
+  font-size: 45px;
   font-weight: bold;
+  color: $gray;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
 .card-trip p {
   font-size: 20px;
   opacity: .7;
   margin: 0;
+  color: $gray;
 }
 
 .card-trip .card-trip-infos {
@@ -44,8 +49,17 @@
   justify-content: space-between;
   align-items: flex-end;
   position: relative;
+  margin-left: 15px;
+  margin-top: 15px;
+  margin-bottom: 5px;
 }
 
+.card-trip .price {
+  font-size: 40px;
+  font-weight: bold;
+  margin-right: 10px;
+  color: $orange,
+}
 
 
 .form-show {
@@ -53,11 +67,15 @@
   padding: 25px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  color: $gray;
   h3 {
     text-align: center;
+    color: $blue;
+    font-weight: bold;
   }
   .form-content {
     padding-top: 20px;
+    color: $gray;
   }
 }
 
@@ -71,14 +89,17 @@
     padding-left: 10px;
     font-weight: bold;
     font-size: 30px;
+    color: $gray;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.1);
   }
   h4 {
     font-weight: bold;
     margin-bottom: 0;
     font-size: 25px;
+    color: $gray;
   }
   a {
-    color: black;
+    color: $gray;
     &:hover {
       color: $orange;
       text-decoration: none;
